Remove IndexLive, add register/login views (non-live), switch SheetPage over to live view

--- a/app/assets/css/app.scss
+++ b/app/assets/css/app.scss
@@ -596,10 +596,9 @@ button {
     width: 100%;
     opacity: 0.8;
     transition: opacity 150ms linear;
-
-    &:hover, &:focus {
-      opacity: 1;
-    }
+  }
+  &:hover img, &:focus img {
+    opacity: 1;
   }
 }
 
