Switch RoomProcess to new trivia engine

--- a/app/lib/app_web/live/explorer_live.html.heex
+++ b/app/lib/app_web/live/explorer_live.html.heex
@@ -15,7 +15,7 @@
       </div>
     </section>
     <section role="tabpanel" id="review" aria-labelledby="tab2" class="container hidden py-2 bg-black">
-      Under construction
+      <button id="trivia" class="bg-green interactable" phx-click="trivia">Get question</button>
     </section>
   </div>
   <p id="error-box" class="text-red hidden"></p>
