--- a/app/lib/app_web/templates/layout/root.html.heex
+++ b/app/lib/app_web/templates/layout/root.html.heex
@@ -15,6 +15,7 @@
     <%= live_title_tag assigns[:page_title] || "Datagame" %>
     <link rel="stylesheet" href={Routes.static_path(@conn, "/css/app.css")} />
     <script type="text/javascript">
+    window.basePath = '<%= AppWeb.Endpoint.config(:url)[:path] || "/" %>';
     window.pageRoutes = {
       sheet: '<%= Routes.sheet_path(@conn, :index, "__PARAM__") %>',
       explore: '<%= Routes.explorer_path(@conn, :index, "__PARAM__") %>',
